--- a/BHSCMSApp/BHSCMSApp/Content/Site.css
+++ b/BHSCMSApp/BHSCMSApp/Content/Site.css
@@ -1,6 +1,6 @@
 ﻿/* Move down content because we have a fixed navbar that is 50px tall */
 body {
-    padding-top: 50px;
+    padding-top: 10px;
     padding-bottom: 20px;
     height: 100%;
    
@@ -13,6 +13,8 @@ body {
     padding-right: 10px;
     margin-right:10px;
     margin-top:10px;
+    margin-left:10px;
+    margin-right:10px;
  
    
 }
@@ -26,10 +28,29 @@ input[type="password"] {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .jumbotron {
-        margin-top: 20px;
+        margin-top: 10px;
+        margin: 0 auto;
     }
     .body-content {
         padding: 0;
-
+        margin-top:5px;
     }
+}
+#wrap
+{
+    margin-top:2px;
+    margin-left:12px;
+    margin-right:12px;
+}
+
+.carousel-inner img {
+  width: 100%;
+  height: 300px;
+  max-height: 300px;
+}
+
+#header
+{
+   
+    float:right;
 }
