--- a/BHSCMSApp/BHSCMSApp/Dashboard/DashboardVendor.Master
+++ b/BHSCMSApp/BHSCMSApp/Dashboard/DashboardVendor.Master
@@ -15,7 +15,27 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <script src="../Scripts/jquery-1.10.2.js"></script>
+    
+    <link href="../Content/menubar.css" rel="stylesheet" />
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+   <script src="script.js"></script>
+    <script>
+        (function ($) {
+            $(document).ready(function () {
+                $('#cssmenu').prepend('<div id="menu-button">Menu</div>');
+                $('#cssmenu #menu-button').on('click', function () {
+                    var menu = $(this).next('ul');
+                    if (menu.hasClass('open')) {
+                        menu.removeClass('open');
+                    }
+                    else {
+                        menu.addClass('open');
+                    }
+                });
+            });
+        })(jQuery);
 
+    </script>
 </head>
 <body>
 
@@ -47,59 +67,40 @@
             </Scripts>
         </asp:ScriptManager>
 
-
-
-
-
-
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-              
-          </button>
-          <img src="/img/logo.png" width="230" height="65"/>
+         <div id="headerpage">
+            <img src="/img/BHLOUTM-P.png" width=25%/>
+            <My:UserInfoBoxControl runat="server" ID="UserInfoBoxControl" />
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="DashboardAdmin"><img src="/img/dashboard.png" width="25" height="25"/> Dashboard</a></li>
-            <%--<li><a href="#">Settings</a></li>--%>
-            <li><a href="/Dashboard/Account/VendorProfile.aspx">My Profile</a></li>
-            <%--<li><a href="#">Help</a></li>--%>
-          </ul>
-          <%--<form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search..."/>
-          </form>--%>
-        </div>
-      </div>
-    </div>
+        <br />
 
-        <My:UserInfoBoxControl runat="server" ID="UserInfoBoxControl" />
-       <br />
-       <br />
-       <br />
-       <br />
+
+
+
+       <div id='cssmenu'>
+                <ul>
+                   <li><a href='/Dashboard/DashboardVendor'><span>Dashboard</span></a></li>
+                   <li class='active has-sub'><a href='#'><span>Negotiations</span></a>
+                      <ul>
+                         <li><a href='#'><span>RFI</span></a></li>
+                         <li><a href='#'><span>RFP</span></a>                            
+                         </li>
+                      </ul>
+                   </li>                    
+                    <li><a href='#'><span>Reports</span></a></li>
+                    <li><a href='#'><span>Contracts</span></a></li>
+                    <li><a href="/Dashboard/Account/VendorProfile.aspx"><span>User Account</span></a></li>                
+                </ul>
+                </div>
 
         <div class="container body-content">
 
-            <div class="row">
-           <div class="col-sm-3 col-md-2 sidebar">
-          
-          <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">My RFI</a></li>
-            <li class="active"><a href="#">My RFP</a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">My Contracts</a></li>
-          </ul>
-         
-        </div>
-        <div class="col-sm-9 main">
-
+             <div class="row" style="width:100%">
+        
+       
+            <br />
+            <br />
+            <br />
+            <br />
         <asp:ContentPlaceHolder ID="MainContent" runat="server">
 
         
@@ -107,7 +108,7 @@
 
 
           
-        </div>
+       
       </div>
 
 
