--- a/BHSCMSApp/BHSCMSApp/Site.Master
+++ b/BHSCMSApp/BHSCMSApp/Site.Master
@@ -13,6 +13,29 @@
     </asp:PlaceHolder>
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="/Content/menubar.css" rel="stylesheet" />
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+   <script src="script.js"></script>
+    <script>
+        (function ($) {
+            $(document).ready(function () {
+                $('#cssmenu').prepend('<div id="menu-button">Menu</div>');
+                $('#cssmenu #menu-button').on('click', function () {
+                    var menu = $(this).next('ul');
+                    if (menu.hasClass('open')) {
+                        menu.removeClass('open');
+                    }
+                    else {
+                        menu.addClass('open');
+                    }
+                });
+            });
+        })(jQuery);
+
+    </script>
+
+
+
 
 </head>
 <body>
@@ -41,45 +64,35 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    
-                       <img src="/img/logo.png" width="230" height="65"/>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav" style="margin-left: 30px">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About Us</a></li>
-                        <li><a runat="server" href="~/Contact">Contact Us</a></li>
-                    </ul>
-                    <asp:LoginView runat="server" ViewStateMode="Disabled">
-                        <AnonymousTemplate>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="https://www.facebook.com/BaptistHealthLouisville" ><img src="/img/fb.ico" width="50" height="35"/></a></li>
-                                <li><a runat="server" href="https://twitter.com/BHLouisville" ><img src="/img/tw.png" width="50" height="40"/></a></li>
-                                <li><a runat="server" href="~/Account/Register" visible="false"></a></li>                                
-                                <%--<li><a runat="server" href="~/Account/Login">Log in</a></li>--%>
-                            </ul>
-                        </AnonymousTemplate>
-                        <LoggedInTemplate>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="~/Account/Manage" title="Manage your account">Welcome back, <%: Context.User.Identity.GetUserName()  %> !</a></li>
-                                <li>
-                                    <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" OnLoggingOut="Unnamed_LoggingOut" />
-                                </li>
-                            </ul>
-                        </LoggedInTemplate>
-                    </asp:LoginView>
-                </div>
-            </div>
-        </div>
+       
+         <div id="logo"><img src="/img/BHLOUTM-P.png" width=25%/></div>
+        
+    <div id='cssmenu'>
+<ul>
+    <li><a runat="server" href="~/"><span>Home</span></a></li>
+  
+   <%--<li class='active has-sub'><a href='#'><span>Products</span></a>
+      <ul>
+         <li class='has-sub'><a href='#'><span>Product 1</span></a>
+            <ul>
+               <li><a href='#'><span>Sub Product</span></a></li>
+               <li class='last'><a href='#'><span>Sub Product</span></a></li>
+            </ul>
+         </li>
+         <li class='has-sub'><a href='#'><span>Product 2</span></a>
+            <ul>
+               <li><a href='#'><span>Sub Product</span></a></li>
+               <li class='last'><a href='#'><span>Sub Product</span></a></li>
+            </ul>
+         </li>
+      </ul>
+   </li>--%>
+     <li><a runat="server" href="~/About"><span>About</span></a></li>
+    <li><a runat="server" href="~/Contact"><span>Contact Us</span></a></li>
+     <li><a runat="server" href="/Account/Register"><span>Register</span></a></li>
+   
+</ul>
+</div>
          
         <div class="container body-content">
           
@@ -105,8 +118,8 @@
      <div id="footer" class="panel-footer">
                 <div class=".panel-group">
             
-                   <ul >
-                        <li style="display:inline"><a runat="server" href="~/">Home|</a></li>
+                   <ul>
+                        <li style="display:inline;"><a runat="server" href="~/">Home|</a></li>
                         <li style="display:inline"><a runat="server" href="~/About">About Us|</a></li>
                         <li style="display:inline"><a runat="server" href="~/Contact">Contact Us|</a></li>
                        <li style="display:inline"><a runat="server" href="~/Account/Sitemap">Site Map|</a></li>
