--- a/BHSCMSApp/BHSCMSApp/Site.Master
+++ b/BHSCMSApp/BHSCMSApp/Site.Master
@@ -14,6 +14,7 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="/Content/menubar.css" rel="stylesheet" />
+    <link href="/Content/Site.css" rel="stylesheet" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
    <script src="script.js"></script>
     <script>
@@ -64,9 +65,12 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-       
-         <div id="logo"><img src="/img/BHLOUTM-P.png" width=25%/></div>
+       <div id="headerpage">
         
+        <div id="logo"><img src="/img/BHLOUTM-P.png" width=25%/></div>
+           
+        </div>
+      
     <div id='cssmenu'>
 <ul>
     <li><a runat="server" href="~/"><span>Home</span></a></li>
@@ -94,7 +98,7 @@
 </ul>
 </div>
          
-        <div class="container body-content">
+        <div class="container body-content" style="float: none; margin: 0 auto; background-color:white">
           
          
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
@@ -119,16 +123,16 @@
                 <div class=".panel-group">
             
                    <ul>
-                        <li style="display:inline;"><a runat="server" href="~/">Home|</a></li>
-                        <li style="display:inline"><a runat="server" href="~/About">About Us|</a></li>
-                        <li style="display:inline"><a runat="server" href="~/Contact">Contact Us|</a></li>
-                       <li style="display:inline"><a runat="server" href="~/Account/Sitemap">Site Map|</a></li>
-                       <li style="display:inline"><a runat="server" href="~/Account/Terms">Terms and Conditions</a></li>
+                        <li style="display:inline; font-family:'Trebuchet MS'; font-size:small; text-transform:uppercase"><a runat="server" href="~/">Home|</a></li>
+                        <li style="display:inline; font-family:'Trebuchet MS'; font-size:small; text-transform:uppercase"><a runat="server" href="~/About">About Us|</a></li>
+                        <li style="display:inline; font-family:'Trebuchet MS'; font-size:small; text-transform:uppercase"><a runat="server" href="~/Contact">Contact Us|</a></li>
+                       <li style="display:inline; font-family:'Trebuchet MS'; font-size:small; text-transform:uppercase"><a runat="server" href="~/Account/Sitemap">Site Map|</a></li>
+                       <li style="display:inline; font-family:'Trebuchet MS'; font-size:small; text-transform:uppercase"><a runat="server" href="~/Account/Terms">Terms and Conditions</a></li>
                        <%-- <li style="display:inline"><a runat="server" href="~/Account/Register">Register|</a></li>
                         <li style="display:inline"><a runat="server" href="~/Account/Login">Log in</a></li>--%>
                     </ul>
 
-                <p style="color:#1F1F14">&copy; All rights reserved <%: DateTime.Now.Year %> - Baptist Health Louisville</p>
+                <p style="color:#1F1F14; font-family:'Trebuchet MS'; font-size:small ">&copy; All rights reserved <%: DateTime.Now.Year %> - Baptist Health Louisville</p>
             
              </div>
     </div><%--end footer--%>
